# internal/transport/http/v1/api.go
@@ -28,6 +28,7 @@ func (a *API) Public(r chi.Router) {
 	r.Post("/auth/register", a.auth.Register)
 	r.Post("/auth/login", a.auth.Login)
 	r.Get("/users", a.users.ListUsers)
+	r.Get("/users/{id}/tracks", a.tracks.ListUploaderTracks)
 	r.Get("/users/{id}", a.users.GetUser)
 	r.Get("/tracks", a.tracks.ListTracks)
 	r.Get("/tracks/{id}/stream", a.tracks.StreamTrack)
@@ -36,6 +37,7 @@ func (a *API) Public(r chi.Router) {
 
 func (a *API) Protected(r chi.Router) {
 	r.Get("/me", a.users.Me)
+	r.Get("/me/tracks", a.tracks.ListMyTracks)
 	r.Post("/users", a.users.CreateUser)
 	r.Put("/users/{id}", a.users.UpdateUser)
 	r.Delete("/users/{id}", a.users.DeleteUser)
